--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,20 @@ spring.data.mongodb.auto-index-creation=true
 
 # Server Port (Optional: Change if 8080 is busy)
 server.port=8080
+
+# --- EMAIL CONFIGURATION ---
+# The Gmail SMTP server address
+spring.mail.host=smtp.gmail.com
+# Port 587 is standard for TLS (secure) email
+spring.mail.port=587
+
+# Your new project-specific Gmail address
+spring.mail.username=rafaymehmoodalam@gmail.com
+
+# The 16-character APP PASSWORD you generate in Google settings
+spring.mail.password=dqfbadojpfomstyg
+
+# Security settings required by Gmail
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
